Revert "replaced ESLint with npm lint"
This reverts commit 45b9a95b66826a8c8cb76992a977ac4ae72910fa.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,10 @@ jobs:
       - name: run tests
         run: npm test
       - name: Run linters
-        run: npm lint
+        uses: wearerequired/lint-action@v2
+        with:
+          eslint: true 
       - name: build project
-        run: npm build
+        run: npm run build
       - name: deploy
         run: echo "Deploying ..."    
