--- a/.github/workflows/EDP-RATINGREV-JOB.yml
+++ b/.github/workflows/EDP-RATINGREV-JOB.yml
@@ -24,4 +24,11 @@ jobs:
         steps:
             - name: Upgrade pip
               run: python -m pip install --upgrade pip
+            - name: Uninstall pyspark
+              run: python -m pip uninstall -y pyspark
+            - name: Install pypandoc, wheel, cryptography snowflake-connector-python
+              run: |
+                python -m pip install pypandoc
+                python -m pip install wheel
+                python -m pip install cryptography snowflake-connector-python
     
