--- a/.github/workflows/EDP-RATINGREV-JOB.yml
+++ b/.github/workflows/EDP-RATINGREV-JOB.yml
@@ -10,7 +10,7 @@ on:
     push:
         branches:
             - main
-        paths:
+        paths-ignore:
             - '.github/workflows/*'
 jobs:
     Code_Checkout:
