--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,20 +1,20 @@
-name: deploy
-on: [ workflow_dispatch, push ]
-jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout code
-        uses: actions/checkout@v3
-      - name: install node.js
-        uses: actions/setup-node@v4
-      - name: install dependencies
-        run: npm ci
-      - name: run tests
-        run: npm test
-      - name: Run linters
-        run: npm run lint
-      - name: build project
-        run: npm run build
-      - name: deploy
-        run: echo "Deploying ..."    
+# name: deploy
+# on: [ workflow_dispatch, push ]
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: checkout code
+#         uses: actions/checkout@v3
+#       - name: install node.js
+#         uses: actions/setup-node@v4
+#       - name: install dependencies
+#         run: npm ci
+#       - name: run tests
+#         run: npm test
+#       - name: Run linters
+#         run: npm run lint
+#       - name: build project
+#         run: npm run build
+#       - name: deploy
+#         run: echo "Deploying ..."    
