--- a/.github/workflows/output.yml
+++ b/.github/workflows/output.yml
@@ -1,8 +1,8 @@
-name: output for event
-on: issues
-jobs:
-  output:
-    runs-on: ubuntu-latest
-    steps:
-      - name: output github context for event
-        run: echo "${{ toJSON(github.event) }}"
+# name: output for event
+# on: issues
+# jobs:
+#   output:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: output github context for event
+#         run: echo "${{ toJSON(github.event) }}"
