--- a/.github/workflows/create-json.yml
+++ b/.github/workflows/create-json.yml
@@ -89,10 +89,12 @@ jobs:
             }}"
           }' > ./kinesis_firehose.json
 
-      - name: Commit kinesis_firehose.json
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add ./kinesis_firehose.json
-          git commit -m 'Add generated kinesis_firehose.json'
-          git push
+          - name: Commit and Push kinesis_firehose.json
+          env:
+            ACTIONS_PAT: ${{ secrets.ACTIONS_PAT }}
+          run: |
+            git config --global user.name 'fvder'
+            git config --global user.email 'joseph.duduyemi09@gmail.com'
+            git add ./kinesis_firehose.json
+            git commit -m 'Add generated kinesis_firehose.json'
+            git push https://github-actions:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
