--- a/.github/workflows/create-json.yml
+++ b/.github/workflows/create-json.yml
@@ -97,4 +97,4 @@ jobs:
             git config --global user.email 'joseph.duduyemi09@gmail.com'
             git add ./kinesis_firehose.json
             git commit -m 'Add generated kinesis_firehose.json'
-            git push https://github-actions:${{ secrets.ACTIONS_PAT }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
+            git push https://${{ secrets.ACTIONS_PAT }}@github.com/fvder/practice-test HEAD:refs/heads/master
